--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@
 
         /* Set a style for the submit/register button */
         .registerbtn {
-        background-color: #04AA6D;
+        background-color: #111111;
         color: white;
         padding: 16px 20px;
         margin: 8px 0;
